changed notebooks to use FredReader class from pandas-datareader (rather then hit FRED API direclty)

--- a/python/notebooks/02_BUG_paper_appendix_B.ipynb
+++ b/python/notebooks/02_BUG_paper_appendix_B.ipynb
@@ -168,8 +168,8 @@
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates',header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index()\n",
     "\n",
-    "starts =  pd.to_datetime(df['Peak month'])\n",
-    "ends = pd.to_datetime(df['Trough month'])"
+    "starts =  pd.to_datetime(df['Peak month'],format='%B %Y')\n",
+    "ends = pd.to_datetime(df['Trough month'],format='%B %Y')"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
