--- a/python/notebooks/03_BUG_paper_appendix_C-D.ipynb
+++ b/python/notebooks/03_BUG_paper_appendix_C-D.ipynb
@@ -68,8 +68,8 @@
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
-    "starts =  pd.to_datetime(df['Peak month'])\n",
-    "ends = pd.to_datetime(df['Trough month'])"
+    "starts =  pd.to_datetime(df['Peak month'],format='%B %Y')\n",
+    "ends = pd.to_datetime(df['Trough month'],format='%B %Y')"
    ]
   },
   {
@@ -525,14 +525,6 @@
     "plt.ylabel('Efficient unemployment rate', fontsize=12)\n",
     "plt.title('Efficient unemployment rate', fontsize=14)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de092548",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -551,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
