--- a/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
+++ b/python/notebooks/05_BUG_paper_sec5-7_appE.ipynb
@@ -67,8 +67,8 @@
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
-    "starts =  pd.to_datetime(df['Peak month'])\n",
-    "ends = pd.to_datetime(df['Trough month'])"
+    "starts =  pd.to_datetime(df['Peak month'],format='%B %Y')\n",
+    "ends = pd.to_datetime(df['Trough month'],format='%B %Y')"
    ]
   },
   {
@@ -245,10 +245,8 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['UB'], zeta=zeta, \n",
-    "                                                   kappa=kappa)\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['LB'], zeta=zeta, \n",
-    "                                                   kappa=kappa)\n"
+    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['UB'], zeta=zeta, kappa=kappa)\n",
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['LB'], zeta=zeta, kappa=kappa)"
    ]
   },
   {
@@ -307,10 +305,8 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[1], \n",
-    "                                                   kappa=kappa)\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[0], \n",
-    "                                                   kappa=kappa)"
+    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[1], kappa=kappa)\n",
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta_range[0], kappa=kappa)"
    ]
   },
   {
@@ -360,10 +356,8 @@
    "outputs": [],
    "source": [
     "eff_unempl = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa)\n",
-    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, \n",
-    "                                                   kappa=kappa_range[1])\n",
-    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, \n",
-    "                                                   kappa=kappa_range[0])"
+    "eff_unempl_ub = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[1])\n",
+    "eff_unempl_lb = bug.compute_efficient_unemployment(u_q, v_q, bev_e['E'], zeta=zeta, kappa=kappa_range[0])"
    ]
   },
   {
@@ -747,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
