--- a/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
+++ b/python/notebooks/06_Computing_Bev_Gap_w_latest_data.ipynb
@@ -22,9 +22,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import urllib.request\n",
-    "import json"
+    "import numpy as np"
    ]
   },
   {
@@ -74,40 +72,21 @@
     "![image.png](https://fred.stlouisfed.org/images/fred-logo-2x.png)\n",
     "<br>\n",
     "\n",
-    "The St.Louis Fed has an [API](https://fred.stlouisfed.org/docs/api/fred/series_observations.html) which alows you to pull data programatically.\n",
+    "The St. Louis Fed has an [API](https://fred.stlouisfed.org/docs/api/fred/series_observations.html) which allows you to pull data programatically.\n",
+    "You can do this yourself with a registered API key. (See [here](https://fred.stlouisfed.org/docs/api/api_key.html) for info.)\n",
     "\n",
-    "**You will need a registered API key**. See [here](https://fred.stlouisfed.org/docs/api/api_key.html) for info."
+    "*Or, we can use the handy FredReader class from the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/index.html) package!*"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a4b142f",
+   "id": "76384588-b6d6-4d4b-b6ae-016cbfbeac1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a helper function for pulling json formatted data from FRED\n",
-    "def get_series(series_id, my_key, start_date='1951-01-01'):\n",
-    "    \n",
-    "    link = 'https://api.stlouisfed.org/fred/series/observations?series_id='+series_id+'&observation_start='+start_date+'&file_type=json&api_key='+my_key\n",
-    "    content = urllib.request.urlopen(link).read()\n",
-    "    data = json.loads(content)\n",
-    "    df = pd.DataFrame(data['observations'])[['date', 'value']]\n",
-    "    \n",
-    "    return df\n",
-    " "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cacb487f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## This key is an EXAMPLE ONLY!! \n",
-    "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'"
+    "from pandas_datareader.fred import FredReader\n",
+    "default_start_date = '1951-01-01'"
    ]
   },
   {
@@ -121,16 +100,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7adaa2bb",
+   "id": "53d8ec13-70f5-4f3e-938c-879bd56b13a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "recession = get_series('USREC', my_key)\n",
-    "recession['date'] = pd.to_datetime(recession['date'] )\n",
-    "recession['value'] = recession['value'].astype(int)\n",
-    "recession.set_index('date', inplace=True)\n",
-    "recession['starts'] = (recession.value- recession.value.shift(1) ==1)\n",
-    "recession['ends'] = (recession.value- recession.value.shift(1) ==-1)"
+    "recession = FredReader('USREC', start=default_start_date).read()\n",
+    "recession['starts'] = (recession.USREC- recession.USREC.shift(1) ==1)\n",
+    "recession['ends'] = (recession.USREC- recession.USREC.shift(1) ==-1)"
    ]
   },
   {
@@ -142,21 +118,6 @@
    "source": [
     "starts = recession.index[recession['starts']==1].to_list()\n",
     "ends = recession.index[recession['ends']==1].to_list()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79d4dd02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax = recession.plot(color='grey',  linewidth=1, alpha=.6, figsize=(6,4),legend=False )\n",
-    "plt.fill_between(recession.index, 0, recession.value, color='grey', alpha=.6, zorder=-100)\n",
-    "\n",
-    "bug.format_plot(ax)\n",
-    "plt.ylim(0,1)\n",
-    "plt.title('NBER based Recession Indicators for the United States')"
    ]
   },
   {
@@ -174,20 +135,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unempl = get_series('UNRATE', my_key)\n",
-    "unempl['date'] = pd.PeriodIndex(pd.to_datetime(unempl['date'] ).dt.to_period('m') )\n",
-    "u = pd.Series(data=unempl['value'].values,index=unempl['date'], name='unempl_rate')\n",
-    "u = pd.to_numeric(u)/100.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "970f4af1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u_q = u.resample('Q').mean()"
+    "u = FredReader('UNRATE',start=default_start_date ).read()/100.0\n",
+    "u = u.squeeze()\n",
+    "u.head()"
    ]
   },
   {
@@ -197,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = u.plot(figsize=(8,5), linewidth=2, color='darkred', label='unemployment')\n",
+    "ax = u.plot(figsize=(8,5), linewidth=2, color='darkred')\n",
     "bug.format_plot(ax, recession_dates=[starts, ends], augment_legend=True, legend_loc=2)\n",
     "\n",
     "plt.ylim(0,.16)\n",
@@ -240,8 +190,9 @@
    "outputs": [],
    "source": [
     "hwi = pd.read_csv(\"../new_data/HWI_index.txt\", skiprows=6, header=None,delim_whitespace=True)\n",
-    "hwi['date'] = pd.PeriodIndex(pd.to_datetime(hwi[0].str[:4]+'-'+hwi[0].str[-2:] ).dt.to_period('m') )\n",
-    "vac_proxy = pd.Series(data=pd.to_numeric(hwi[1].values),index=hwi['date'], name='help-wanted index') "
+    "hwi['date'] = pd.to_datetime(hwi[0].str[:4]+'-'+hwi[0].str[-2:]+'-01' )\n",
+    "vac_proxy = pd.Series(data=pd.to_numeric(hwi[1].values),index=hwi['date'], name='help-wanted index') \n",
+    "vac_proxy.index.freq = vac_proxy.index.inferred_freq"
    ]
   },
   {
@@ -259,9 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labor_lev = get_series('CLF16OV', my_key)\n",
-    "labor_lev['date'] = pd.PeriodIndex(pd.to_datetime(labor_lev['date'] ).dt.to_period('m') )\n",
-    "lfl = pd.Series(data=pd.to_numeric(labor_lev['value'].values),index=labor_lev['date'], name='labor_force_level')"
+    "labor_lev = FredReader('CLF16OV', start=default_start_date).read().astype(float)"
    ]
   },
   {
@@ -279,9 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nf_vac = get_series('JTSJOL', my_key)\n",
-    "nf_vac['date'] = pd.PeriodIndex(pd.to_datetime(nf_vac['date'] ).dt.to_period('m') )\n",
-    "vac = pd.Series(data=pd.to_numeric(nf_vac['value'].values),index=nf_vac['date'], name='nonfarm_vacancies')"
+    "nf_vac = FredReader('JTSJOL', start=default_start_date).read().astype(float)"
    ]
   },
   {
@@ -293,7 +240,8 @@
    },
    "outputs": [],
    "source": [
-    "vac_rate = vac/lfl"
+    "vac_rate = nf_vac.JTSJOL/labor_lev.CLF16OV\n",
+    "vac_rate.index.freq = vac_rate.index.inferred_freq"
    ]
   },
   {
@@ -311,8 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = pd.concat([vac_proxy.loc[:'2000-12']/100., vac_rate.loc['2001-01':]],)\n",
-    "v_q = v.resample('Q').mean()"
+    "v = pd.concat([vac_proxy.loc[:'2000-12-01']/100., vac_rate.loc['2001-01-01':]],)"
    ]
   },
   {
@@ -328,14 +275,6 @@
     "plt.ylim(0,.08)\n",
     "plt.title('Monthly Vacancy Rate')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67e9322a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -369,8 +308,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_u_q = np.log(u.resample('Q').mean())\n",
-    "log_v_q = np.log(v.resample('Q').mean())"
+    "u_q = u.resample('Q').mean()\n",
+    "v_q = v.resample('Q').mean()\n",
+    "\n",
+    "u_q.index = u_q.index.to_period('Q')\n",
+    "v_q.index = v_q.index.to_period('Q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f4c58eb-656d-4c4f-9009-2ea72624af29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_u_q = np.log(u_q)\n",
+    "log_v_q = np.log(v_q)"
    ]
   },
   {
@@ -389,14 +342,17 @@
     "\n",
     "plt.annotate('2020Q1', (log_u_q.loc['2020Q1'], log_v_q.loc['2020Q1']),)\n",
     "plt.annotate('2020Q2', (log_u_q.loc['2020Q2'], log_v_q.loc['2020Q2']))\n",
-    "plt.annotate(str(log_u_q.index[-1]), (log_u_q.iloc[-1], log_v_q.iloc[-1]))\n",
+    "plt.annotate('2021Q1', (log_u_q.loc['2021Q1'], log_v_q.loc['2021Q1']))\n",
+    "plt.annotate('2022Q1', (log_u_q.loc['2022Q1'], log_v_q.loc['2022Q1']))\n",
+    "plt.annotate('2023Q1', (log_u_q.loc['2023Q1'], log_v_q.loc['2023Q1']))\n",
+    "\n",
     "\n",
     "bug.format_plot(ax, xgrid=False)\n",
     "\n",
     "plt.ylabel('Log Vacancy Rate', fontsize=12)\n",
     "plt.xlabel('Log Unemployment Rate', fontsize=12)\n",
     "plt.title('Beveridge Curve (quarterly)', fontsize=15)\n",
-    "plt.suptitle('Highlighting COVID effects')"
+    "_=plt.suptitle('Highlighting COVID effects')"
    ]
   },
   {
@@ -446,9 +402,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1ce68ede",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, bkps_default,)"
@@ -508,8 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bkps_new = bug.get_bp_breakpoints(log_u_q, log_v_q, use_bp_defaults=False,n_bkps=6, \n",
-    "                                  min_size=10)\n",
+    "bkps_new = bug.get_bp_breakpoints(log_u_q, log_v_q, use_bp_defaults=False, n_bkps=6, min_size=10)\n",
     "bkps_new"
    ]
   },
@@ -517,9 +470,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b5d82134",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, bkps_new,)"
@@ -532,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e_new, _ = bug.compute_beveridge_elasticity(log_u_q, log_v_q, bkps_in=bkps_new)"
+    "e_new, coeffs = bug.compute_beveridge_elasticity(log_u_q, log_v_q, bkps_in=bkps_new)"
    ]
   },
   {
@@ -577,6 +528,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c958cb4d-ac9b-4c70-b8f0-c689bc5cfd27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bug.plot_beveridge_curve_fits(log_u_q, log_v_q, bkps_new, coeffs, figsize=(7,7))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0c66e22f",
    "metadata": {},
@@ -612,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
