--- a/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
+++ b/python/notebooks/08_Lots_More_on_Breakpoints.ipynb
@@ -32,9 +32,11 @@
     "![image.png](https://fred.stlouisfed.org/images/fred-logo-2x.png)\n",
     "<br>\n",
     "\n",
-    "The St.Louis Fed has an [API](https://fred.stlouisfed.org/docs/api/fred/series_observations.html) which alows you to pull data programatically.\n",
     "\n",
-    "**You will need a registered API key**. See [here](https://fred.stlouisfed.org/docs/api/api_key.html) for info."
+    "The St. Louis Fed has an [API](https://fred.stlouisfed.org/docs/api/fred/series_observations.html) which allows you to pull data programatically.\n",
+    "You can do this yourself with a registered API key. (See [here](https://fred.stlouisfed.org/docs/api/api_key.html) for info.)\n",
+    "\n",
+    "*Or, we can use the handy FredReader class from the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/index.html) package!*"
    ]
   },
   {
@@ -46,10 +48,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import urllib.request\n",
-    "import json, timeit\n",
+    "import timeit\n",
     "import ruptures as rpt\n",
-    "from kneed import KneeLocator"
+    "from kneed import KneeLocator\n",
+    "from pandas_datareader.fred import FredReader\n",
+    "default_start_date = '1951-01-01'"
    ]
   },
   {
@@ -80,47 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29641fbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a helper function for pulling json formatted data from FRED\n",
-    "def get_series(series_id, my_key, start_date='1951-01-01'):\n",
-    "    \n",
-    "    link = 'https://api.stlouisfed.org/fred/series/observations?series_id='+series_id+'&observation_start='+start_date+'&file_type=json&api_key='+my_key\n",
-    "    content = urllib.request.urlopen(link).read()\n",
-    "    data = json.loads(content)\n",
-    "    df = pd.DataFrame(data['observations'])[['date', 'value']]\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b0803bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## This key is an EXAMPLE ONLY!! \n",
-    "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d16718fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Recession information\n",
-    "recession = get_series('USREC', my_key)\n",
-    "recession['date'] = pd.to_datetime(recession['date'] )\n",
-    "recession['value'] = recession['value'].astype(int)\n",
-    "recession.set_index('date', inplace=True)\n",
-    "recession['starts'] = (recession.value- recession.value.shift(1) ==1)\n",
-    "recession['ends'] = (recession.value- recession.value.shift(1) ==-1)\n",
+    "recession = FredReader('USREC', start=default_start_date).read()\n",
+    "recession['starts'] = (recession.USREC- recession.USREC.shift(1) ==1)\n",
+    "recession['ends'] = (recession.USREC- recession.USREC.shift(1) ==-1)\n",
     "starts = recession.index[recession['starts']==1].to_list()\n",
     "ends = recession.index[recession['ends']==1].to_list()"
    ]
@@ -132,11 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unemployment rate\n",
-    "unempl = get_series('UNRATE', my_key)\n",
-    "unempl['date'] = pd.PeriodIndex(pd.to_datetime(unempl['date'] ).dt.to_period('m') )\n",
-    "u = pd.Series(data=unempl['value'].values,index=unempl['date'], name='unempl_rate')\n",
-    "u = pd.to_numeric(u)/100.0\n",
+    "u = FredReader('UNRATE',start=default_start_date ).read()/100.0\n",
+    "u = u.squeeze()\n",
+    "u.index.freq = u.index.inferred_freq\n",
     "u_q = u.resample('Q').mean()"
    ]
   },
@@ -147,10 +115,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vacancy info\n",
     "hwi = pd.read_csv(\"../new_data/HWI_index.txt\", skiprows=6, header=None,delim_whitespace=True)\n",
-    "hwi['date'] = pd.PeriodIndex(pd.to_datetime(hwi[0].str[:4]+'-'+hwi[0].str[-2:] ).dt.to_period('m') )\n",
-    "vac_proxy = pd.Series(data=pd.to_numeric(hwi[1].values),index=hwi['date'], name='help-wanted index') "
+    "hwi['date'] = pd.to_datetime(hwi[0].str[:4]+'-'+hwi[0].str[-2:]+'-01' )\n",
+    "vac_proxy = pd.Series(data=pd.to_numeric(hwi[1].values),index=hwi['date'], name='help-wanted index') \n",
+    "vac_proxy.index.freq = vac_proxy.index.inferred_freq"
    ]
   },
   {
@@ -160,9 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labor_lev = get_series('CLF16OV', my_key)\n",
-    "labor_lev['date'] = pd.PeriodIndex(pd.to_datetime(labor_lev['date'] ).dt.to_period('m') )\n",
-    "lfl = pd.Series(data=pd.to_numeric(labor_lev['value'].values),index=labor_lev['date'], name='labor_force_level')"
+    "labor_lev = FredReader('CLF16OV', start=default_start_date).read().astype(float)\n",
+    "nf_vac = FredReader('JTSJOL', start=default_start_date).read().astype(float)"
    ]
   },
   {
@@ -172,11 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nf_vac = get_series('JTSJOL', my_key)\n",
-    "nf_vac['date'] = pd.PeriodIndex(pd.to_datetime(nf_vac['date'] ).dt.to_period('m') )\n",
-    "vac = pd.Series(data=pd.to_numeric(nf_vac['value'].values),index=nf_vac['date'], name='nonfarm_vacancies')\n",
-    "vac_rate = vac/lfl\n",
-    "v = pd.concat([vac_proxy.loc[:'2000-12']/100., vac_rate.loc['2001-01':]],)\n",
+    "vac_rate = nf_vac.JTSJOL/labor_lev.CLF16OV\n",
+    "vac_rate.index.freq = vac_rate.index.inferred_freq\n",
+    "v = pd.concat([vac_proxy.loc[:'2000-12-01']/100., vac_rate.loc['2001-01-01':]],)\n",
     "v_q = v.resample('Q').mean()"
    ]
   },
@@ -195,7 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (8,8))\n",
+    "fig = plt.figure(figsize = (7,7))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "ax.plot(np.log(u), np.log(v), linewidth=1, color='darkblue')\n",
     "\n",
@@ -213,12 +178,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_u_q = np.log(u.resample('Q').mean())\n",
-    "log_v_q = np.log(v.resample('Q').mean())\n",
+    "u_q.index = u_q.index.to_period('Q')\n",
+    "v_q.index = v_q.index.to_period('Q')\n",
+    "\n",
+    "log_u_q = np.log(u_q)\n",
+    "log_v_q = np.log(v_q)\n",
     "\n",
     "last_index = min(log_u_q.last_valid_index(), log_v_q.last_valid_index())\n",
     "log_u_q = log_u_q.loc[:last_index]\n",
-    "log_v_q = log_v_q.loc[:last_index]"
+    "log_v_q = log_v_q.loc[:last_index]\n",
+    "\n"
    ]
   },
   {
@@ -228,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize = (8,8))\n",
+    "fig = plt.figure(figsize = (7,7))\n",
     "ax = fig.add_subplot(1, 1, 1)\n",
     "ax.plot(log_u_q, log_v_q, linewidth=1,color='darkblue')\n",
     "\n",
@@ -624,9 +593,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6fc2f0d5",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fit_dynp = rpt.Dynp(model='linear', min_size=10, jump=1).fit(signal)\n",
@@ -767,9 +734,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fe1103b9",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ax = bug.plot_beveridge_gap_series(gap_opt, in_bks, recession_dates=[starts, ends], )\n",
@@ -781,9 +746,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0e13d1bf",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bug.plot_beveridge_elasticity_series(e_opt, recession_dates=[starts, ends], draw_legend=True)\n",
@@ -794,9 +757,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b5c0764b",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, opt)"
@@ -806,21 +767,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "44c0bdcc",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "bug.plot_beveridge_curve_fits(log_u_q, log_v_q, opt, coeffs_opt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b85a7bc3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bug.plot_beveridge_curve_fits(log_u_q, log_v_q, opt, coeffs_opt, figsize=(7,7))"
+   ]
   }
  ],
  "metadata": {
@@ -839,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
