--- a/python/notebooks/01_BUG_paper_section_2.ipynb
+++ b/python/notebooks/01_BUG_paper_section_2.ipynb
@@ -75,8 +75,8 @@
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
-    "starts =  pd.to_datetime(df['Peak month'])\n",
-    "ends = pd.to_datetime(df['Trough month'])"
+    "starts =  pd.to_datetime(df['Peak month'], format='%B %Y')\n",
+    "ends = pd.to_datetime(df['Trough month'], format='%B %Y')"
    ]
   },
   {
@@ -314,7 +314,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a366a53e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_unempl_rate_q, log_vacancy_rate_q, \n",
@@ -338,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
