--- a/python/notebooks/04_BUG_paper_section_5.ipynb
+++ b/python/notebooks/04_BUG_paper_section_5.ipynb
@@ -84,8 +84,8 @@
    "source": [
     "df = pd.read_excel('../../code/data.xlsx', sheet_name='Recession dates', header=1, \n",
     "                   usecols=['Peak month', 'Trough month'],).drop([0]).reset_index() \n",
-    "starts =  pd.to_datetime(df['Peak month'])\n",
-    "ends = pd.to_datetime(df['Trough month'])"
+    "starts =  pd.to_datetime(df['Peak month'],format='%B %Y')\n",
+    "ends = pd.to_datetime(df['Trough month'],format='%B %Y')"
    ]
   },
   {
@@ -386,9 +386,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "101b0708",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bug.plot_beveridge_curve_segments(log_u_q, log_v_q, est_bkps)"
@@ -718,7 +716,7 @@
     "ax = u_q.plot(color='navy', linewidth=2, figsize=(10, 7), label='Actual')\n",
     "sqrt_uv.plot(ax=ax,color='teal', linewidth=2,label='Efficient: sqrt(uv)')\n",
     "\n",
-    "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient: Bev elas.')\n",
+    "eff_unempl.plot(ax=ax,color='magenta', linewidth=2,label='Efficient: Bev elas')\n",
     "\n",
     "\n",
     "bug.format_plot(ax, recession_dates=[starts, ends], xgrid=True, \n",
@@ -882,7 +880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = eff_unempl.plot(figsize=(10, 7),color='magenta', linewidth=2,label='Efficient: Bev elas.')\n",
+    "ax = eff_unempl.plot(figsize=(10, 7),color='magenta', linewidth=2,label='Efficient: Bev elas')\n",
     "sqrt_uv.plot(color='teal', linewidth=2, label='Efficient: sqrt(uv)')\n",
     "nairu['NAIRU (percent)'].plot(color='darkorange', linewidth=2,label='NAIRU')\n",
     "natural['Natural rate of unemployment (percent)'].plot(color='darkgreen', \n",
@@ -924,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
