--- a/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
+++ b/python/notebooks/07_More_on_Breakpoints_monthly_series.ipynb
@@ -27,7 +27,7 @@
     "  * social value of non-work (default is zeta = 0.26)\n",
     "  * recruting costs (default is kappa = 0.92)\n",
     "\n",
-    "The vacancy rate is the most tricky to get. We can compute vacancy rate from the total non-farm job openings and the labor level. Both of those series are available from 2001 onwards. Fro pre-2001, we would need to splice-in the \"composite help-wanted index (cHWI)\" values from Barnichon (2010). However, we prefer to avoid this, as the cHWI is not as easilly obtained as the other economic data.\n",
+    "The vacancy rate is the most tricky to get. We can compute vacancy rate from the total non-farm job openings and the labor level. Both of those series are available from 2001 onwards. For pre-2001, we would need to splice-in the \"composite help-wanted index (cHWI)\" values from Barnichon (2010). However, we prefer to avoid this, as the cHWI is not as easilly obtained as the other economic data.\n",
     "\n",
     "This is another reason to consider the monthly Beveridge Gap, so that we have enough data points (vs a quarterly series) starting in 2001.\n",
     "\n",
@@ -38,9 +38,10 @@
     "![image.png](https://fred.stlouisfed.org/images/fred-logo-2x.png)\n",
     "<br>\n",
     "\n",
-    "The St.Louis Fed has an [API](https://fred.stlouisfed.org/docs/api/fred/series_observations.html) which alows you to pull data programatically.\n",
+    "The St. Louis Fed has an [API](https://fred.stlouisfed.org/docs/api/fred/series_observations.html) which allows you to pull data programatically.\n",
+    "You can do this yourself with a registered API key. (See [here](https://fred.stlouisfed.org/docs/api/api_key.html) for info.)\n",
     "\n",
-    "**You will need a registered API key**. See [here](https://fred.stlouisfed.org/docs/api/api_key.html) for info."
+    "*Or, we can use the handy FredReader class from the [pandas-datareader](https://pandas-datareader.readthedocs.io/en/latest/index.html) package!*"
    ]
   },
   {
@@ -52,10 +53,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import urllib.request\n",
-    "import json\n",
     "import ruptures as rpt\n",
-    "from kneed import KneeLocator"
+    "from kneed import KneeLocator\n",
+    "from pandas_datareader.fred import FredReader\n",
+    "default_start_date = '2001-01-01'"
    ]
   },
   {
@@ -86,47 +87,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cae0b3f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a helper function for pulling json formatted data from FRED\n",
-    "def get_series(series_id, my_key, start_date='2001-01-01'):\n",
-    "    \n",
-    "    link = 'https://api.stlouisfed.org/fred/series/observations?series_id='+series_id+'&observation_start='+start_date+'&file_type=json&api_key='+my_key\n",
-    "    content = urllib.request.urlopen(link).read()\n",
-    "    data = json.loads(content)\n",
-    "    df = pd.DataFrame(data['observations'])[['date', 'value']]\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12ac5d6a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## This key is an EXAMPLE ONLY!! \n",
-    "# You will need to replace this with your actual registered key for the FRED API\n",
-    "my_key = 'abcdef1234567890abcdef'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0b5f96b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Recession information\n",
-    "recession = get_series('USREC', my_key,start_date='1998-01-01')\n",
-    "recession['date'] = pd.to_datetime(recession['date'] )\n",
-    "recession['value'] = recession['value'].astype(int)\n",
-    "recession.set_index('date', inplace=True)\n",
-    "recession['starts'] = (recession.value- recession.value.shift(1) ==1)\n",
-    "recession['ends'] = (recession.value- recession.value.shift(1) ==-1)\n",
+    "recession = FredReader('USREC', start=default_start_date).read()\n",
+    "recession['starts'] = (recession.USREC- recession.USREC.shift(1) ==1)\n",
+    "recession['ends'] = (recession.USREC- recession.USREC.shift(1) ==-1)\n",
     "starts = recession.index[recession['starts']==1].to_list()\n",
     "ends = recession.index[recession['ends']==1].to_list()"
    ]
@@ -138,10 +106,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unempl = get_series('UNRATE', my_key)\n",
-    "unempl['date'] = pd.PeriodIndex(pd.to_datetime(unempl['date'] ).dt.to_period('m') )\n",
-    "u = pd.Series(data=unempl['value'].values,index=unempl['date'], name='unempl_rate')\n",
-    "u = pd.to_numeric(u)/100.0"
+    "u = FredReader('UNRATE',start=default_start_date ).read()/100.0\n",
+    "u = u.squeeze()\n",
+    "u.index.freq = u.index.inferred_freq"
    ]
   },
   {
@@ -151,9 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labor_lev = get_series('CLF16OV', my_key)\n",
-    "labor_lev['date'] = pd.PeriodIndex(pd.to_datetime(labor_lev['date'] ).dt.to_period('m') )\n",
-    "lfl = pd.Series(data=pd.to_numeric(labor_lev['value'].values),index=labor_lev['date'], name='labor_force_level')"
+    "labor_lev = FredReader('CLF16OV', start=default_start_date).read().astype(float)"
    ]
   },
   {
@@ -163,10 +128,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nf_vac = get_series('JTSJOL', my_key)\n",
-    "nf_vac['date'] = pd.PeriodIndex(pd.to_datetime(nf_vac['date'] ).dt.to_period('m') )\n",
-    "vac = pd.Series(data=pd.to_numeric(nf_vac['value'].values),index=nf_vac['date'], name='nonfarm_vacancies')\n",
-    "v = vac/lfl"
+    "nf_vac = FredReader('JTSJOL', start=default_start_date).read().astype(float)\n",
+    "v = nf_vac.JTSJOL/labor_lev.CLF16OV\n",
+    "v.index.freq = v.index.inferred_freq"
    ]
   },
   {
@@ -179,8 +143,12 @@
     "last = min(v.last_valid_index(),u.last_valid_index())\n",
     "v = v.loc[:last]\n",
     "u = u.loc[:last]\n",
+    "\n",
+    "u.index = u.index.to_period('M')\n",
+    "v.index = v.index.to_period('M')\n",
+    "\n",
     "log_v = np.log(v)\n",
-    "log_u = np.log(u)"
+    "log_u = np.log(u)\n"
    ]
   },
   {
@@ -387,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bug.plot_beveridge_curve_fits(log_u, log_v, opt, coeffs, figsize=(8,8))"
+    "bug.plot_beveridge_curve_fits(log_u, log_v, opt, coeffs, figsize=(7,7))"
    ]
   },
   {
@@ -415,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
